[package]
name = "prism"
version = "0.1.0"
authors = []
edition = "2021"

[profile.release]
debug = true

[dependencies]
ring = "0.16"
bincode = "1.2"
serde_derive = "1.0"
serde = "1.0"
hex-literal = "0.4.1"
rocksdb = "0.21.0"
log = "0.4"
stderrlog = "0.5.4"
mio = "0.8.6"
slab = "0.4"
rand = "0.7.0"
enum-display-derive="0.1"
mio-extras = "2.0"
bigint = "4"
serde_json = "1.0"
tiny_http = "0.12.0"
ctrlc = "3.1"
lazy_static = "1.4"
hex = "0.4"
url = "2.1"
base64 = "0.21.0"
crossbeam = "0.8.2"
statrs = "0.16.0"
tokio = { version = "1.28.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.2.0"

[dependencies.ed25519-dalek]
version = "1.0.1"
default-features = false
features = ["u64_backend", "std", "batch"]

[dependencies.clap]
version = "4.2.7"
features = ["wrap_help", "derive"]
